# MainboardEngine

./: .gitignore  README.md  build.gradle.kts  build.py  settings.gradle.kts
MBEngine/: .gitignore  build.gradle.kts  settings.gradle.kts
MBEngine/native/: CMakeLists.txt
MBEngine/native/include/: engine.h  event_message_type.h  mainboard_engine.h
MBEngine/native/tests/: bgfx_test.h  engine_render_test.h  fs_sprite.sc  vs_fullscreen.sc  vs_sprite.sc  wayland_window_test.h  win32_window_test.h
MBEngine/src/main/java/com/potato/: Main.java
MBEngine/src/main/java/com/potato/Map/: Block.java  BlockItem.java  Map.java  MapManager.java
MBEngine/src/main/java/com/potato/NativeUtils/: NativeCaller.java
MBEngine/src/main/java/com/potato/Utils/: EngineBuilder.java  EventProcesser.java
MBEngine/src/main/java/com/potato/Variable/: EventMessage.java  OSType.java
MBEngine/src/test/java/com/potato/: NativeLibraryTest.java
MBEngine/src/test/java/com/potato/Utils/: KeyboardManagerTest.java
MBEngine/test/map/: main_map.toml
MapMaker/: build.gradle.kts  settings.gradle.kts
native/: CMakeLists.txt  library.cpp  library.h  mainboard_engine.h  platform.cpp  platform.h
native/MEbuild/: mainboard_native.exp  mainboard_native.lib  test_native.exp  test_native.lib
native/include/: engine.h  event_message_type.h  mainboard_engine.h  platform.h
native/tests/: Win32WindowTest.cpp  bgfx_test.h  engine_render_test.h  fs_sprite.sc  fs_tiled.sc  test.cpp  win32_window_test.h  window_test.h
src/main/java/com/potato/: Config.java  EngineType.java  MainboardNativeLibrary.java  NativeLoader.java  OSType.java  WindowRect.java
src/main/java/com/potato/Map/: Block.java  BlockItem.java  Map.java  MapManager.java
src/main/java/com/potato/NativeUtils/: CursorPoint.java  KeyEvent.java  MainboardNativeLibrary.java  NativeCaller.java  WindowRect.java
src/main/java/com/potato/Utils/: CursorManager.java  CursorPoint.java  Engine.java  EngineHelper.java  EventMessage.java  EventProcesser.java  GameContext.java  KeyCode.java  KeyEvent.java  KeyboardManager.java  NativeCaller.java
src/main/java/com/potato/Variable/: EngineType.java  KeyCode.java
src/test/java/com/potato/: NativeLibraryTest.java
src/test/java/com/potato/Utils/: CursorManagerTest.java  EngineTest.java  KeyboardManagerTest.java
test/: engine_config.toml
test/map/: main_map.toml
